<resources>
    <string name="app_name">Github Issues</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issue_state">State: %s</string>
    <string name="assigned_to">Assigned to:</string>
    <string name="posted_by">Posted by:</string>
    <string name="updated">Updated:</string>
    <string name="created">Created:</string>
    <string name="issue_number">#%d</string>
    <string name="unknown">Unknown</string>
    <string name="no_description">No description</string>
    <string name="no_one_assignee">No one</string>
    <string name="tab_all">All</string>
    <string name="tab_open">Open</string>
    <string name="tab_closed">Closed</string>
    <string name="placeholder_no_issues">There are currently no issues</string>
    <string name="placeholder_no_issue_details">Tap an issue in the list, if there are any.\nIssue details will be displayed here</string>
    <string name="something_went_wrong">Something went wrong.\nWe are already working on this issue.</string>
    <string name="retry">Retry</string>
    <string name="issue_details_action_bar">Issue Details</string>
</resources>