<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/appbar"
    android:paddingBottom="16dp"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/IssueTitleText"
            android:id="@+id/issue_details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            android:layout_marginTop="@dimen/margin_on_sides"
            android:layout_marginEnd="@dimen/margin_on_sides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Throwing retrofit2.HttpException 500 Internal Server Error" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintEnd_toStartOf="@+id/issue_details_state"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/issue_details_title"
            tools:text="#1234" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginEnd="@dimen/margin_on_sides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/issue_details_number"
            app:layout_constraintTop_toBottomOf="@+id/issue_details_title"
            tools:text="State: Open" />

        <TextView
            style="@style/IssueDescriptionText"
            android:id="@+id/issue_details_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginEnd="@dimen/margin_on_sides"
            android:paddingEnd="@dimen/small_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/issue_details_number"
            tools:text="Exception in thread main kotlin.KotlinNullPointerException:
        Response from com.example.retrofit_okhttp_kotlin.WebInterface.logout was null
        but response body type was declared as non-null
	    at retrofit2.KotlinExtensions$await$2$2.onResponse(KotlinExtensions.kt:43)
	    at retrofit2.OkHttpCall$1.onResponse(OkHttpCall.java:161)
	    at okhttp3.internal.connection.RealCall$AsyncCall.run(RealCall.kt:519)"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_posted_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            app:layout_constraintBottom_toBottomOf="@id/issue_details_author_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/issue_details_author_avatar"
            android:text="@string/posted_by" />

        <ImageView
            android:id="@+id/issue_details_author_avatar"
            android:layout_width="@dimen/issue_details_avatar_width"
            android:layout_height="@dimen/issue_details_avatar_height"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/margin_between_elements"
            app:layout_constraintEnd_toStartOf="@+id/issue_details_author"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/issue_details_body"
            android:importantForAccessibility="no"
            tools:src="@drawable/ic_user_placeholder" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/issue_details_author_avatar"
            app:layout_constraintStart_toEndOf="@+id/issue_details_author_avatar"
            app:layout_constraintTop_toTopOf="@id/issue_details_author_avatar"
            tools:text="Maxim Alexandrov" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_assigned_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            app:layout_constraintBottom_toBottomOf="@id/issue_details_assignee_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/issue_details_assignee_avatar"
            android:text="@string/assigned_to" />

        <ImageView
            android:id="@+id/issue_details_assignee_avatar"
            android:layout_width="@dimen/issue_details_avatar_width"
            android:layout_height="@dimen/issue_details_avatar_height"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/margin_between_elements"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/issue_details_author_avatar"
            android:importantForAccessibility="no"
            tools:src="@drawable/ic_user_placeholder" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_assignee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/issue_details_assignee_avatar"
            app:layout_constraintStart_toEndOf="@+id/issue_details_assignee_avatar"
            app:layout_constraintTop_toTopOf="@id/issue_details_assignee_avatar"
            tools:text="Maxim Alexandrov" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issue_details_assignee_avatar"
            android:text="@string/updated" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_updated_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/margin_between_elements"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/issue_details_assignee_avatar"
            tools:text="2 days ago" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_on_sides"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issue_details_updated"
            android:text="@string/created" />

        <TextView
            style="@style/IssueMetadataText"
            android:id="@+id/issue_details_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/margin_between_elements"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/issue_details_updated_date"
            tools:text="2 days ago" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="100dp" />

        <ImageView
            android:id="@+id/empty_issue_details_placeholder_image"
            android:layout_width="@dimen/empty_issue_details_placeholder_image_width"
            android:layout_height="@dimen/empty_issue_details_placeholder_image_height"
            android:src="@drawable/ic_empty_issue_details"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/empty_issue_details_placeholder_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:importantForAccessibility="no"
            tools:visibility="visible" />

        <TextView
            style="@style/IssueEmptyDetailsPlaceholderText"
            android:id="@+id/empty_issue_details_placeholder_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder_no_issue_details"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty_issue_details_placeholder_image"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>